Fix: horizontal scroll in docs page

--- a/web/intro-styles.css
+++ b/web/intro-styles.css
@@ -4,7 +4,9 @@
   -ms-box-sizing: border-box;
   box-sizing: border-box;
 }
-
+body {
+  overflow-x: hidden;
+}
 .hero {
   position: relative;
   background-image: url('./assets/hero_background.png');
